--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,14 @@
     border: 3px solid red;
     
 }
+.hire-after::after{
+    content: '';
+    width: 13%;
+    height: 3px;
+    background-color: #f9004d;
+    margin: auto;
+    display: block;
+    margin-top: 10px;
+    border: 3px solid greenyellow;
+    
+}
