--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,8 @@
     box-sizing: border-box;
     
 }
-.nav-link{
-    color: black;
-}
-.nav-link:hover{
-    color: brown;
-}
-.home-img{
-    margin-left: 130px;
-}
+
+/* Hr line */
 
 .text-after::after{
     content: '';
